making logo disapear on smaller screens to avoid overlapping with navbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -386,6 +386,7 @@ h1{
 .logo-B {
   width: 30%;
   height: 30%;
+  visibility: hidden;
 }
 
 .menu-S-nav {
@@ -411,4 +412,10 @@ h1{
 
 .navlink-B:hover {
   color: rgba(0,0,0,1);
+}
+
+@media (min-width:840px){
+  .logo-B {
+    visibility: visible;
+  }
 }
